<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/myddarkgray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@color/myddarkgray"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@color/myblack"
            android:orientation="horizontal">

            <Button
                android:id="@+id/day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/day"
                android:textColor="@color/mylightgray"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/mygray" />

            <Button
                android:id="@+id/week"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/week"
                android:textColor="@color/mylightgray"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/mygray" />

            <Button
                android:id="@+id/month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/month"
                android:textColor="@color/mylightgray"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/mygray" />

            <Button
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/year"
                android:textColor="@color/mylightgray"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

		            <!--
		    This title strip will display the currently visible page title, as well as the page
		    titles for adjacent pages.
		            -->

            <android.support.v4.view.PagerTitleStrip
                android:id="@+id/pager_title_strip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/mywhite"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:textColor="@color/myddarkgray" />
            
        </android.support.v4.view.ViewPager>

    </LinearLayout>
    
        <LinearLayout
           android:id="@+id/adView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="vertical" />
    
</LinearLayout>